WorkerNodeServices/MAPERROR
  File "test_mapper.py", line 8
    pass
       ^
IndentationError: expected an indented block
